FullQa New/src/objects/Zuora_Customer_Config3__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Zuora_ApiBaseurl__c</fullName>
        <label>Zuora_ApiBaseurl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_GatewayName__c</fullName>
        <label>Zuora_GatewayName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_PageId__c</fullName>
        <label>Zuora_PageId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_UriBaseurl__c</fullName>
        <label>Zuora_UriBaseurl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_paymentGateway__c</fullName>
        <label>Zuora_paymentGateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zuora_Customer_Config3</label>
</CustomObject>